package com.example.kp.Database;

public class Help extends DbHandler{

    public Help(){
        super("Help");

    }
}

