package com.example.kp.Database;

public class Pol extends  DbHandler{
    public Pol(){
        super("Pol");
    }
}
