@startuml

title __KP1's Class Diagram__\n

  namespace  {
    namespace om.example.kp {
      class com.example.kp.AdminWindow {
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      class com.example.kp.ChatWindom {
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.Chat {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.DbHandler {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.Help {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.LK {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.Master {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      namespace Database {
        class com.example.kp.Database.Pol {
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      class com.example.kp.Login {
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      class com.example.kp.Main {
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      class com.example.kp.MainController {
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      class com.example.kp.NewHelp {
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      class com.example.kp.NewWork {
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      class com.example.kp.PolWindow {
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      class com.example.kp.Window {
      }
    }
  }
  

  namespace  {
    namespace om.example.kp {
      class com.example.kp.WorkerWindom {
      }
    }
  }
  

  com.example.kp.AdminWindow .up.|> javafx.fxml.Initializable
  com.example.kp.AdminWindow -up-|> com.example.kp.Window
  com.example.kp.AdminWindow o-- com.example.kp.Database.Help : help
  com.example.kp.AdminWindow o-- com.example.kp.Database.LK : lk
  com.example.kp.ChatWindom .up.|> javafx.fxml.Initializable
  com.example.kp.ChatWindom -up-|> com.example.kp.Window
  com.example.kp.ChatWindom o-- com.example.kp.Database.Chat : chat
  com.example.kp.Database.Chat -up-|> com.example.kp.Database.DbHandler
  com.example.kp.Database.Help -up-|> com.example.kp.Database.DbHandler
  com.example.kp.Database.LK -up-|> com.example.kp.Database.DbHandler
  com.example.kp.Database.Master -up-|> com.example.kp.Database.DbHandler
  com.example.kp.Database.Pol -up-|> com.example.kp.Database.DbHandler
  com.example.kp.Login o-- com.example.kp.Database.DbHandler : databaseWork
  com.example.kp.Login o-- com.example.kp.Database.LK : lk
  com.example.kp.Main -up-|> javafx.application.Application
  com.example.kp.MainController o-- com.example.kp.Database.LK : lk
  com.example.kp.NewHelp .up.|> javafx.fxml.Initializable
  com.example.kp.NewHelp -up-|> com.example.kp.Window
  com.example.kp.NewHelp o-- com.example.kp.Database.Help : help
  com.example.kp.NewWork .up.|> javafx.fxml.Initializable
  com.example.kp.NewWork -up-|> com.example.kp.Window
  com.example.kp.NewWork o-- com.example.kp.Database.Help : help
  com.example.kp.PolWindow .up.|> javafx.fxml.Initializable
  com.example.kp.PolWindow -up-|> com.example.kp.Window
  com.example.kp.PolWindow o-- com.example.kp.Database.Help : help
  com.example.kp.Window o-- com.example.kp.Database.LK : lk
  com.example.kp.WorkerWindom .up.|> javafx.fxml.Initializable
  com.example.kp.WorkerWindom -up-|> com.example.kp.Window
  com.example.kp.WorkerWindom o-- com.example.kp.Database.Help : help


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
